# ExoMy-2022

./: README.md
exomy_pico/: CMakeLists.txt
exomy_pico/lib/SteeringServo/: CMakeLists.txt  SteeringServo.cpp  SteeringServo.h
exomy_pico/src/: CMakeLists.txt  exomy_config.h  main.cpp
